# metal-dialect

./: .gitignore  CMakeLists.txt  README.md  default.metal  default.metallib  makefile
MetalRuntime/Sources/MetalRuntime/: MetalRuntime.m
MetalRuntime/Sources/MetalRuntimeSwift/: Buffer.swift  CommandBuffer.swift  CommandQueue.swift  Device.swift  Utils.swift
examples/control-flow/: main.cpp
examples/expressions/: main.cpp
examples/fold/: main.cpp
examples/memory/: main.cpp
examples/mlir/: arith_constants.mlir
examples/the-game-of-life/: main.cpp
examples/utility/: Driver.h
include/: CMakeLists.txt
include/Tools/mlir-translate/: MlirTranslateMain.h  Translation.h
include/metal-c/: Dialects.h
include/metal/Conversion/: ArithToMetal.h  FuncToFunc.h  GpuLaunchToMetal.h  LinalgToMetal.h  MetalPasses.h  MetalPasses.td  MetalToLLVM.h  ScfToMetal.h
lib/: CMakeLists.txt
lib/CAPI/: CMakeLists.txt
lib/metal/: CMakeLists.txt
lib/shader/: CMakeLists.txt
metal-opt/: CMakeLists.txt  metal-opt.cpp
scripts/: mlir2bin-lib.sh
test/: CMakeLists.txt  test.mlir
test-provvisori/: 1-starting_point.mlir  after_official.mlir  middle.mlir  oldParallel.mlir  out.mlir  parallel.mlir  scriptino.sh  starting_point.mlir
test-provvisori-1parte/: after_official.mlir  middle.mlir  out.mlir  script_prima_parte.sh  starting_point.mlir
test-provvisori-2parte/: after_official.mlir  middle.mlir  out.mlir  script_seconda_parte.sh  start.mlir  starting_point.mlir
test/CAPI/: metal-capi-test.c
tools/mlir-translate/: CMakeLists.txt  mlir-translate.cpp
(+32 files in other folders)
